$Id$

2018-10-14  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron BX/MX1/2/3/500, M5/600, 1100 SSDs: MX500 M.2
	- Samsung based SSDs: Samsung SM841 (#1043), PM841 (#1052),
	  Samsung 860 EVO (#1034, #1040, #1051, #1059),
	  Samsung 860 PRO (#1010, #1068, #1102, #1103, #1104),
	  Samsung Portable SSD T5 (#1050)
	- USB: Samsung Portable SSD T5 (0x04e8:0x61f5) (#1050)

	os_darwin.cpp: Add missing braces to SMART RETURN STATUS LBA register
	setting.  Detected by g++ 7.3 -Wmisleading-indentation.

2018-10-11  Christian Franke  <franke@computer.org>

	os_win32.cpp: Decode Windows 10 1809 and Server 2019 build number.
	Move "(64)" to end of version info.

	os_linux.cpp: Fix '-d megaraid' open crash on missing /proc/devices.
	There is no /proc/devices on ESXi (see #800) and WSL.

2018-10-09  Christian Franke  <franke@computer.org>

	smartd.cpp: Move code for '--capabilities' to separate functions.

	smartd.cpp: Rework main loop.

	smartctl.cpp, smartd.cpp, os_linux.cpp, os_solaris.cpp:
	Replace all uses of EXIT() macro.  Use early return where possible,
	use throw otherwise.
	utility.h: Remove EXIT() macro.

	utility.cpp: Detect more C++ language versions for -V option.

	drivedb.h:
	- Crucial/Micron BX/MX1/2/3/500, M5/600, 1100 SSDs: Rename,
	  BX500 (#1095)
	- Seagate Samsung SpinPoint F4 EG (AF) (#1090)
	- Seagate Momentus 5400.6: Add '-F xerrorlba' (#1094)
	- USB: JMicron JM562 (0x152d:0x0562) (IDENTIFY only, see #966)
	- USB: VIA VL715 (0x2109:0x0715) (#1098)

2018-10-09  Anthony D'Atri  <anthony.datri@gmail.com>

	drivedb.h: (#1096)
	- Samsung based SSDs: Samsung PM863a (#951, #952, #961, #962, #972)
	- Intel 730 and DC S35x0/3610/3700 Series SSDs: Dell-flavor S3500

2018-10-09  Thomas Niedermeier  <tniedermeier@thomas-krenn.com>

	drivedb.h: Samsung PM883 and SM883 (GH pull/19)

2018-09-27  Christian Franke  <franke@computer.org>

	INSTALL: Update list of default ./configure options.
