@@ -1,5 +1,11 @@
 $Id$
 
+2018-10-17  Rick Chen  <juihsiang.chen@gmail.com>
+
+	scsiprint.cpp: Add SCSI information to JSON output as below:
+	- Drive trip temperature (#1079)
+	- Error counter log read/write/verify (#1079)
+
 2018-10-14  Christian Franke  <franke@computer.org>
 
 	drivedb.h:
